--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "bugs": {
     "url": "https://github.com/colyseus/create-colyseus/issues"
   },
+  "type": "commonjs",
   "homepage": "https://github.com/colyseus/create-colyseus#readme",
   "devDependencies": {
     "@colyseus/loadtest": "^0.14.4",
@@ -33,6 +34,8 @@
   "dependencies": {
     "@colyseus/arena": "^0.14.22",
     "@colyseus/monitor": "^0.14.20",
+    "@metaplex-foundation/mpl-token-metadata": "^2.5.2",
+    "@solana/spl-token": "^0.3.7",
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
     "express": "^4.16.4"
